data/all_generated_tests/raw_wast_tests/return_ImproperFunctionCallorReturnHandling_2937.wast
;; 6. **Indirect Call With Incorrect Type Leading to Return**:    - Arrange an indirect call with an incorrect type that must eventually lead to a return statement. This tests type consistency and stack unwinding when encountering incorrect types before hitting a return statement.

(assert_invalid
  (module
    (type $t0 (func (result i32)))
    (type $t1 (func))
    (table 1 funcref)
    (elem (i32.const 0) $f0)
    (func $f0 (type $t0)
      (i32.const 0)
      (return)
    )
    (func (type $t1)
      (call_indirect (type $t1) (i32.const 0))
    )
  )
  "type mismatch"
)